# meeting-copilot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: app_types.py  config.py  main.py
src/api/: server.py
src/audio/: capture.py
src/hotkey/: global_hotkey.py
src/llm/: openai_client.py
src/nlu/: question_detect.py
src/stt/: realtime.py  whisper_fallback.py  whisper_local.py
src/tts/: say.py
src/ui/: overlay.py  subtitles.py
